// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildMcpConfig > serializes a both-server config to stable JSON (snapshot) 1`] = `
"{
  "mcpServers": {
    "playwright": {
      "command": "npx",
      "args": [
        "-y",
        "@playwright/mcp@latest",
        "--headless",
        "--executable-path",
        "/home/me/.cache/ms-playwright/chromium-1217/chrome-linux64/chrome"
      ],
      "env": {
        "CREW_APP_URL": "http://localhost:5173"
      }
    },
    "chrome": {
      "command": "node",
      "args": [
        "/home/me/.claude/plugins/cache/superpowers-chrome/2.0.0/mcp/dist/index.js"
      ]
    }
  }
}"
`;

exports[`buildMcpConfig > serializes a playwright-only config to stable JSON (snapshot) 1`] = `
"{
  "mcpServers": {
    "playwright": {
      "command": "npx",
      "args": [
        "-y",
        "@playwright/mcp@latest",
        "--headless"
      ],
      "env": {
        "CREW_APP_URL": "http://localhost:5173"
      }
    }
  }
}"
`;
